owlcms-docker/src/main/assembly/k8s/overlays/local-certs/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: owlcms-ingress
  labels:
    app: owlcms
spec:
  tls:
    - secretName: o-jflamy-dev
      hosts:
        - o.jflamy.dev
  rules:
    - host: o.jflamy.dev
      http:
        paths:
          - backend:
              serviceName: owlcms-8080
              servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: publicresults-ingress
  labels:
    app: publicresults
spec:
  tls:
    - secretName: r-jflamy-dev
      hosts:
        - r.jflamy.dev
  rules:
    - host: r.jflamy.dev
      http:
        paths:
          - backend:
              serviceName: publicresults-8080
              servicePort: 8080
